src/css/photos-md.scss
@import "mixin";

// ==============================================================
// PhotosMD SASS MIXIN
// ==============================================================

//
// @MIXIN
//
// We use this mixin to create a default photosMd layout.
//
// $transition-duration - transition duration for photosMd in ms	Default: 400
// $filter-active - neki neki. 										Default: #455a64
// $filter-inactive - neki neki. 									Default: #adadad
// $loadmore-bg - neki neki. 										Default: #455a64
// $loadmore-bg-hover - neki neki. 									Default: #455a64
// $loadmore-text - neki neki. 										Default: #fff
// $zoom-bg - full view settings 									Default: #000
// $zoom-header - neki neki. 										Default: #000
// $zoom-header-size - neki neki. 									Default: 3.5em
// $navigation-back - navigation next/prev button settings			Default: #fff
// $navigation-back-circle - neki neki. 							Default: #555
// $navigation-size - neki neki. 									Default: 2.5em
// $navigation-size-small - neki neki. 								Default: 1.5em
// $navigation-next - neki neki. 									Default: #fff
// $navigation-next-circle - neki neki. 							Default: #efefef
// $figure-size - gridview height of image							Default: 10rem

@mixin photosMd(
	$transition-duration: 400,
	$filter-active: #455a64,
	$filter-inactive: #adadad,
	$loadmore-bg: #455a64,
	$loadmore-bg-hover: #455a64,
	$loadmore-text: #fff,
	$zoom-bg: #000,
	$zoom-header: #000,
	$zoom-header-size: 3.5em,
	$navigation-back: #fff,
	$navigation-back-circle: #555,
	$navigation-size: 2.5em,
	$navigation-size-small: 1.5em,
	$navigation-next: #fff,
	$navigation-next-circle: #efefef,
	$figure-size: 10rem
) {
	@at-root{
		html, body {
			&.lock {
				overflow: hidden;
			}
		}
	}

	button[name="filter"][data-filter] {
		&:hover {
			cursor: pointer;
		}
	}

	transition: height #{$transition-duration}ms ease-out;
	@include flexie(row wrap, center, flex-start);
	align-content: flex-start;

	header {
		width: 100%;
		@include flexie(row wrap, center, center);

		.filter {
			width: 100%;
			padding: 2em;
			@include flexie(row nowrap, center, center);

			div {
				@include flexie(row nowrap, center, strech);
			}

			button {
				font: {
					size: 1rem;
					weight: 100;
				}

				font-weight: bold;
				border: none;
				border-bottom: 2px solid $filter-inactive;
				outline: none;
				padding: 5px 20px;
				margin: 0;

				background: transparent;
				color: $filter-inactive;

				&:not(.active):hover {
					color: $filter-active;
				}

				&.active {
					background: transparent;
					border-bottom: 4px solid $filter-active;
					color: $filter-active;
				}

			}

			@media screen and (max-width: 640px) {
				padding: 2px;

				button {
					font: {
						size: .8rem;
						weight: 400;
					}
					padding: 5px 10px;
				}
			}
		}
	}

	.galerija-dimmer, .galerija-controler {
		&.close {
			@include hidden;
		}

		&.open {
			position: fixed;
			top: 0;
			left: 0;
			width: 100%;
			height: 100vh;
			padding: 0;
			margin: 0;
		}
	}

	.galerija-dimmer.open {
		background-color: #000;
		//opacity: .9;
		z-index: 30;
	}

	.galerija-controler.open {
		z-index: 40;
		touch-action: none;
		@include flexie(column nowrap, flex-start, center);

		.galerija-header {
			flex: 0 1 $zoom-header-size;
			width: 100%;
			background: $zoom-header; // fallback
			background: linear-gradient(0deg, transparent, transparentize($zoom-header, 0.4));
			@include flexie(row nowrap, flex-start, center);

			button {
				background: transparent;
				outline: none;
				border: none;
				padding: .8em;
				margin: 8px 1em;
				border-radius: 100%;

				&:hover {
					cursor: pointer;
				}
				&:active {
					background: $navigation-back-circle;
				}
			}

			svg {
				display: block;
				width: 16px;
				height: 16px;
				fill: $navigation-back;
			}
		}

		.galerija-arrows {
			flex: 0 1 100%;
			width: 100%;
			z-index: 50;
			@include flexie(row nowrap, space-between, center);
			cursor: grab;

			&.active {
				cursor: grabbing;
			}

			div {
				//$navigation-size: 2.5em;

				opacity: 0;
				transition: opacity .1s ease-in-out;

				&:first-of-type {
					padding: 30vh 30vw 30vh 0;
				}
				&:last-of-type {
					padding: 30vh 0 30vh 30vw;
				}
				&:hover {
					opacity: 1;
					//transform: scale(1.25);
				}

				svg {
					display: block;
					width: $navigation-size;
					height: $navigation-size;
					margin: #{$navigation-size/2};
					padding: #{$navigation-size/2};
					fill: white;
					border-radius: $navigation-size;
					background: transparentize(#424242, 0.54);

					@media screen and (max-width: #{$navigation-size * 11}) {
						font-size: $navigation-size-small;
						margin: #{$navigation-size-small/8};
						padding: #{$navigation-size-small/8};
						border-radius: $navigation-size-small;
					}

					&:hover {
						cursor: pointer;
					}
				}
			}
		}
	}

	figure {
		height: $figure-size;
		max-width: 90vw;
		position: relative;
		overflow: hidden;
		background-color: transparent;

		margin: 5px;

		box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, .2);
		transition: box-shadow .3s ease-in-out, transform 0s linear, opacity #{$transition-duration/2}ms ease-in-out;
		//align-self: flex-start;

		&.zoom {
			box-shadow: 0px 0px 0px 0px transparent;
		}

		&:hover:not(.zoom) {
			background-color: transparent;
			box-shadow: 0px 0px 0px transparent;
			cursor: pointer;

			/* tablet performance issue */
			@media screen and (min-width: 1600px) {
				transform: scale(.98);
				transition: transform #{$transition-duration/2}ms ease-out;
			}
		}

		&.zoom img {
			object-fit: contain;
			object-position: center;
			// Safari blurry images fix
			backface-visibility: hidden;
			transform: translateZ(0) scale(1.0, 1.0);
		}

		&.zoom figcaption {
			opacity: 0;
		}

		&.hide, &.show {
			opacity: 0;
		}

		div {
			//width: 100%;
			height: 100%;
			margin: 0;
			padding: 0;
		}

		img {
			height: 100%;
			transition: all #{$transition-duration/2}ms ease-in-out;
		}

		figcaption {
			background-color: #fff;
			position: absolute;
			padding: 3px 8px;
			width: 100%;
			//height: 5rem;
			bottom: 0;
			left: 0;
			box-sizing: border-box;

			transition: transform #{$transition-duration * 3 / 4}ms ease-in-out, opacity #{$transition-duration * 3 / 4}ms ease-in-out #{$transition-duration / 4}ms;

			a, p {
				text-align: left justify;
				font-size: 12px;
			}
		}

		@media screen and (max-width: 720px) {
			height: 8em; // backport
			height: 28vw; // backport hard calced
			height: calc(50vw * #{9 / 16});
		}
	}

	footer {
		width: 100%;
		padding-top: 2rem;
		@include flexie(row wrap, center, center);

		button {
			padding: 8px 15px;

			border: none;
			border-radius: 3px;
			font-size: 1rem;
			font-weight: bold;
			background-color: $loadmore-bg;
			color: $loadmore-text;

			box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, .2);
			transition: box-shadow .3s ease-in-out, background-color .3s ease-in-out, color .3s ease-in-out;

			&:hover {
				//color: $loadmore-text;
				background-color: $loadmore-bg-hover;
				box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
			}
		}
	}
}


#galerija {
	background: transparent;
	width: 100%;
	height: auto;

	@include photosMd;
}

